feat: add recoil

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,12 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": [
+      "warn",
+      {
+        "additionalHooks": "useRecoilCallback"
+      }
+    ],
     "react/jsx-filename-extension": [
       "error",
       {
