--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "@/components/*": ["components/*"],
       "@/hooks/*": ["hooks/*"],
       "@/pages/*": ["pages/*"],
-      "@/utils/*": ["utils/*"]
+      "@/store/*": ["store/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
